name:                   wild-bind-indicator
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Graphical indicator for WildBind
description:            Graphical indicator for WildBind
category:               UserInterface
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/wild-bind-indicator
bug-reports:            https://github.com/debug-ito/wild-bind-indicator/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-extensions:   OverloadedStrings
  exposed-modules:      WildBind.Indicator
  -- other-modules:
  build-depends:        base >=4.6.0 && <5,
                        wild-bind >=0.0.0 && <0.2,
                        transformers >=0.3.0 && <0.4,
                        gtk >=0.13.9 && <0.14,
                        text >=1.2.1 && <1.3,
                        containers >=0.5.0 && <0.6

-- executable wild-bind-indicator
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  other-modules:        WildBind.IndicatorSpec
  build-depends:        base, wild-bind-indicator,
                        hspec

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/wild-bind-indicator.git
