name:                   wild-bind-x11
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               X11-specific implementation for WildBind
description:            X11-specific implementation for WildBind
category:               UserInterface
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/wild-bind-x11
bug-reports:            https://github.com/debug-ito/wild-bind/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      WildBind.X11,
                        WildBind.X11.Internal.Key,
                        WildBind.X11.Internal.Window
  -- other-modules:
  build-depends:        base >=4.6.0 && <4.7,
                        wild-bind >=0.0.0 && <0.1,
                        text >=1.2.0 && <1.3,
                        X11 >=1.6.1 && <1.7,
                        containers >=0.5.0 && <0.6,
                        transformers >=0.3.0 && <0.4

-- executable wild-bind-x11
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  other-modules:        WildBind.X11Spec
  build-depends:        base, wild-bind-x11,
                        wild-bind,
                        hspec >=2.1.7 && <2.2,
                        QuickCheck >=2.8.1 && <2.9

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/wild-bind-x11.git
