name:                   wild-bind-x11
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               X11-specific implementation for WildBind
description:            X11-specific implementation for WildBind
category:               UserInterface
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/wild-bind-x11
bug-reports:            https://github.com/debug-ito/wild-bind-x11/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-extensions:   TypeSynonymInstances, OverloadedStrings, MultiParamTypeClasses, FlexibleInstances
  exposed-modules:      WildBind.X11,
                        WildBind.X11.Internal.Key,
                        WildBind.X11.Internal.Window,
                        WildBind.X11.Internal.NotificationDebouncer
--  other-modules:        
  build-depends:        base,
                        wild-bind,
                        text,
                        X11,
                        containers,
                        transformers,
                        fold-debounce,
                        stm

-- executable wild-bind-x11
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -threaded
  main-is:              Spec.hs
  other-modules:        WildBind.X11Spec,
                        WildBind.X11.Internal.KeySpec,
                        WildBind.X11.Internal.NotificationDebouncerSpec
  build-depends:        base, wild-bind-x11,
                        wild-bind, X11,
                        hspec,
                        QuickCheck,
                        time

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/wild-bind-x11.git
