name:                   wild-bind
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Dynamic key binding framework
-- description:            
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      WildBind,
                        WildBind.NumPad
  -- other-modules:
  build-depends:        base >=4.6.0 && <4.7,
                        text >=1.2.0 && <1.3

-- executable wild-bind
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base >=4.6.0 && <4.7,
                        wild-bind,
                        hspec

source-repository head
  type:                 git
--  location:             
