name:                   wild-bind
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Dynamic key binding framework
description:            Dynamic key binding framework
category:               UserInterface
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/wild-bind
bug-reports:            https://github.com/debug-ito/wild-bind/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-extensions:   MultiParamTypeClasses OverloadedStrings
  exposed-modules:      WildBind,
                        WildBind.NumPad
  other-modules:        WildBind.Internal.Common,
                        WildBind.Internal.FrontEnd,
                        WildBind.Internal.BackEnd
  build-depends:        base >=4.6.0 && <4.7,
                        text >=1.2.0 && <1.3,
                        containers >=0.5.0 && <0.6,
                        transformers >=0.3.0 && <0.4

-- executable wild-bind
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base, wild-bind,
                        hspec >=2.1.7 && <2.2

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/wild-bind.git
