name:                   example
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
-- synopsis:               
-- description:            
-- category:               
cabal-version:          >= 2.0
build-type:             Simple

executable example
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports -rtsopts -threaded
  -- other-modules:        
  default-extensions:   OverloadedStrings, StrictData
  -- other-extensions:     
  build-depends:        base <999, wild-bind-task-x11

