name:                   test-readme
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               test README
description:            test README. Longer.
category:               Test
cabal-version:          >= 1.10
build-type:             Simple
-- extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            


-- Test if it succeeds to build.
executable readme-simplest
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=simplest"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        wild-bind-task-x11

executable readme-combine
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=head_process combine"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        process,
                        wild-bind-task-x11

executable readme-append
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=head_process append"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        process,
                        wild-bind-task-x11

executable readme-dynamic
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=head_process pushKey dynamic"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        process,
                        wild-bind-task-x11

executable readme-override
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=head_process pushKey override"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        process,
                        wild-bind-task-x11

executable readme-desc
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=head_process pushKey desc"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        process,
                        wild-bind-task-x11

executable readme-stateful-top
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=head_process stateful_top"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        process,
                        wild-bind-task-x11

executable readme-stateful-full
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=stateful_full"
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        wild-bind-task-x11

executable readme-stateful-condition
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=stateful_full stateful_condition"
                        -Wno-unused-top-binds
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        wild-bind-task-x11

executable readme-generic-keys
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m" -fno-warn-missing-signatures
                        -threaded -pgmL markdown-unlit "-optL=generic_keys"
                        -Wno-unused-top-binds
  main-is:              README.lhs
  build-tool-depends:   markdown-unlit:markdown-unlit
  build-depends:        base >=4.6.0.0 && <5.0,
                        wild-bind,
                        wild-bind-x11
