name:                   test-wild-bind-doc
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ReadmeTest.hs
  default-extensions:   OverloadedStrings
  other-extensions:     QuasiQuotes
  build-depends:        base, wild-bind-task-x11,
                        hspec,
                        directory,
                        process,
                        raw-strings-qq
