name:                   test-wild-bind-doc
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ReadmeTest.hs
  other-extensions:     QuasiQuotes,
                        OverloadedStrings
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base >=0 && <999.99,
                        wild-bind-task-x11 >=0 && <999.99,
                        hspec >=0 && <999.99,
                        directory >=0 && <999.99,
                        process >=0 && <999.99,
                        raw-strings-qq >=0 && <999.99,
                        text >=0 && <999.99
