name:                   wild-bind-task-x11
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Task to install and export everything you need to use WildBind in X11
description:            Task to install and export everything you need to use WildBind in X11
category:               UserInterface
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/wild-bind
bug-reports:            https://github.com/debug-ito/wild-bind/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  exposed-modules:      WildBind.Task.X11
  -- other-modules:
  build-depends:        base

-- executable wild-bind-task-x11
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports
  main-is:              Spec.hs
  -- default-extensions:   
  other-modules:        WildBind.Task.X11Spec
  build-depends:        base, wild-bind-task-x11,
                        hspec

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/wild-bind.git
