name:                   wild-bind-x11
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               X11-specific implementation for WildBind
-- description:            
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      WildBind.X11
  -- other-modules:
  build-depends:        base >=4.6 && <4.7,
                        wild-bind ==0.0.*,
                        text ==1.2.*,
                        X11 ==1.6.*

-- executable wild-bind-x11
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base, wild-bind-x11,
                        hspec

source-repository head
  type:                 git
--  location:             
