name:                   wild-bind
version:                0.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Dynamic key binding framework
description:            Dynamic key binding framework. See https://github.com/debug-ito/wild-bind
category:               UserInterface
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/wild-bind
bug-reports:            https://github.com/debug-ito/wild-bind/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   RankNTypes OverloadedStrings
  other-extensions:     GeneralizedNewtypeDeriving
  exposed-modules:      WildBind,
                        WildBind.Binding,
                        WildBind.FrontEnd,
                        WildBind.Description,
                        WildBind.Exec,
                        WildBind.Input.NumPad
  -- other-modules:        
  build-depends:        base,
                        text,
                        containers,
                        transformers,
                        microlens,
                        data-default-class

-- executable wild-bind
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings FlexibleInstances MultiParamTypeClasses
  other-modules:        WildBind.ExecSpec,
                        WildBind.BindingSpec
                        WildBind.ForTest
  build-depends:        base, wild-bind,
                        transformers, microlens,
                        hspec,
                        QuickCheck,
                        stm

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/wild-bind.git
